applauncherd (0.17.0) unstable; urgency=low

  * Fixes: NB#212024 - Application launcher should be usable (improve performance) also at boot
  * Changes: --debug argument problem fixed in preloading
  * Changes: Corrected error on test-perf-mbooster.py
  * Changes: Commented out the single-instance test case skeletons
  
 -- Jussi Lind <jussi.lind@nokia.com>  Mon, 17 Jan 2011 15:53:15 +0200

applauncherd (0.16.1) stable; urgency=low
  
  * Changes: WRT Booster and related tests removed.
  * Changes: Library preloading warnings are printed only if --debug commandline parameter is given.
  * Fixes: NB#217662 - applauncherd depends on WRT

 -- Antti Kervinen <antti.kervinen@nokia.com>  Thu, 13 Jan 2011 12:00:00 +0200

applauncherd (0.16.0) stable; urgency=low

  * Changes: Single instance test skeletons added

 -- Olli Leppanen <olli.leppanen@nokia.com>  Thu, 13 Jan 2011 15:18:00 +0200

applauncherd (0.16.0) stable; urgency=low

  * Changes: Boosters loaded as plugins.
  * Changes: New test added that checks that booster pid is acquired by application started using booster
  * Changes: Changed wait time between button press and release from 100ms to 200ms in pixelchanged.
  * Changes: Single-instance binary added
  * Fixes: NB#214093 - application started with launcher has wrong name in the process list
  * Fixes: NB#216191 - Lack of single instance support for qml applications 
  * Fixes: NB#216196 - Boosters are not loaded as plugins 

 -- Juha Lintula <juha.lintula@nokia.com>  Wed, 12 Jan 2011 12:00:00 +0200

applauncherd (0.15.10) stable; urgency=low

  * Fixes: NB#211510 - boosters should update oom_adj to 0 before calling main
  * Changes: Some comments made clearer / added.
  * Changes: Code refactoring done for tests. Debugs added.

 -- Jussi Lind <jussi.lind@nokia.com>  Wed, 15 Dec 2010 13:00:08 +0200

applauncherd (0.15.9) stable; urgency=low

  * Changes: Add possibility to track 2 pixels at a time to pixelchanged