@@ -1,6 +1,10 @@
 applauncherd (0.17.0) unstable; urgency=low
 
   * Fixes: NB#212024 - Application launcher should be usable (improve performance) also at boot
+  * Fixes: NB#220076 - applauncherd.bin does not work without link to /tmp/m.themedaemon
+  * Changes: support for --boot-mode in applauncherd.bin
+  * Changes: support for --help in applauncherd.bin
+  * Changes: support for --single-instance in invoker
   * Changes: --debug argument problem fixed in preloading
   * Changes: Corrected error on test-perf-mbooster.py
   * Changes: Commented out the single-instance test case skeletons
